Add initial db migration

--- a/CreditApplications.Web/CreditApplications.Web.csproj
+++ b/CreditApplications.Web/CreditApplications.Web.csproj
@@ -10,4 +10,16 @@
     <Folder Include="ViewModels\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ApplicationServices\CreditApplications.ApplicationServices.csproj" />
+    <ProjectReference Include="..\CreditApplications.DataAccess\CreditApplications.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
