Improve credit application models and logic

--- a/ApplicationServices/CreditApplications.ApplicationServices.csproj
+++ b/ApplicationServices/CreditApplications.ApplicationServices.csproj
@@ -13,4 +13,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CreditApplications.DataAccess\CreditApplications.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
