Add efc logging

--- a/CreditApplications.Web/appsettings.json
+++ b/CreditApplications.Web/appsettings.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "CreditApplicationsConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=CreditApplications;Integrated Security=True;Encrypt=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
   "AllowedHosts": "*"
