Add api credit application and customers controllers

--- a/CreditApplications.WebAPI/appsettings.json
+++ b/CreditApplications.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CreditApplicationsConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=CreditApplications;Integrated Security=True;Encrypt=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
