--- a/CreditApplications.WebAPI/CreditApplications.WebAPI.csproj
+++ b/CreditApplications.WebAPI/CreditApplications.WebAPI.csproj
@@ -8,11 +8,18 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\ApplicationServices\CreditApplications.ApplicationServices.csproj" />
+    <ProjectReference Include="..\CreditApplications.DataAccess\CreditApplications.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
