--- a/CreditApplications.Mobile/CreditApplications.Mobile/CreditApplications.Mobile.csproj
+++ b/CreditApplications.Mobile/CreditApplications.Mobile/CreditApplications.Mobile.csproj
@@ -26,6 +26,10 @@
     <Compile Update="Views\AboutPage.xaml.cs">
       <DependentUpon>AboutPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\CustomerEditPage.xaml.cs">
+      <SubType>Code</SubType>
+      <DependentUpon>CustomerEditPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -39,6 +43,10 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\LoginPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\CustomerEditPage.xaml">
+      <SubType>Designer</SubType>
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\NewCustomerPage.xaml">
