Add credit applications list view for mobile app

--- a/CreditApplications.Mobile/CreditApplications.Mobile/CreditApplications.Mobile.csproj
+++ b/CreditApplications.Mobile/CreditApplications.Mobile/CreditApplications.Mobile.csproj
@@ -30,6 +30,9 @@
       <SubType>Code</SubType>
       <DependentUpon>CustomerEditPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\CreditApplicationsPage.xaml.cs">
+      <DependentUpon>CreditApplicationsPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
