Add product type and application status web api endpoints

--- a/CreditApplications.Mobile/CreditApplications.Mobile/CreditApplications.Mobile.csproj
+++ b/CreditApplications.Mobile/CreditApplications.Mobile/CreditApplications.Mobile.csproj
@@ -33,6 +33,9 @@
     <Compile Update="Views\CreditApplicationsPage.xaml.cs">
       <DependentUpon>CreditApplicationsPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\NewCreditApplicationPage.xaml.cs">
+      <DependentUpon>NewCreditApplicationPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
