--- a/CreditApplications.Intranet/CreditApplications.Intranet.csproj
+++ b/CreditApplications.Intranet/CreditApplications.Intranet.csproj
@@ -7,14 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.5" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ApplicationServices\CreditApplications.ApplicationServices.csproj" />
+    <ProjectReference Include="..\CreditApplications.DataAccess\CreditApplications.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
